{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 304,
  "lineage": "b01d967c-1275-60f7-29fa-6a3f89cc8a93",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:network-acl/acl-00b5522fa1bf98629",
            "default_network_acl_id": "acl-00b5522fa1bf98629",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00b5522fa1bf98629",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "398561966751",
            "subnet_ids": [
              "subnet-043db8d0f3f47cdd8",
              "subnet-0689008f0a290b1b7"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "module-test-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "module-test-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e77908df33c482e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:route-table/rtb-002a55b01c52bfac7",
            "default_route_table_id": "rtb-002a55b01c52bfac7",
            "id": "rtb-002a55b01c52bfac7",
            "owner_id": "398561966751",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "module-test-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "module-test-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e77908df33c482e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:security-group/sg-07179d5ff1bf8e927",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07179d5ff1bf8e927",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "398561966751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "module-test-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "module-test-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e77908df33c482e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:internet-gateway/igw-00793006c72134851",
            "id": "igw-00793006c72134851",
            "owner_id": "398561966751",
            "tags": {
              "Environment": "dev",
              "Name": "module-test-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "module-test-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e77908df33c482e7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00793006c72134851",
            "id": "r-rtb-0e198bad7f04b08221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e198bad7f04b0822",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:route-table/rtb-0e198bad7f04b0822",
            "id": "rtb-0e198bad7f04b0822",
            "owner_id": "398561966751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "module-test-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "module-test-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e77908df33c482e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01266036dcb4bc674",
            "route_table_id": "rtb-0e198bad7f04b0822",
            "subnet_id": "subnet-0689008f0a290b1b7"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ffbd978f40bf71b",
            "route_table_id": "rtb-0e198bad7f04b0822",
            "subnet_id": "subnet-043db8d0f3f47cdd8"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:subnet/subnet-0689008f0a290b1b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0689008f0a290b1b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398561966751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "module-test-vpc-public-ap-northeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "module-test-vpc-public-ap-northeast-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e77908df33c482e7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:subnet/subnet-043db8d0f3f47cdd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043db8d0f3f47cdd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398561966751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "module-test-vpc-public-ap-northeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "module-test-vpc-public-ap-northeast-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e77908df33c482e7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:vpc/vpc-0e77908df33c482e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b5522fa1bf98629",
            "default_route_table_id": "rtb-002a55b01c52bfac7",
            "default_security_group_id": "sg-07179d5ff1bf8e927",
            "dhcp_options_id": "dopt-0cd97a7f9cb95852b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e77908df33c482e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002a55b01c52bfac7",
            "owner_id": "398561966751",
            "tags": {
              "Environment": "dev",
              "Name": "module-test-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "module-test-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ssh_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:security-group/sg-00c6da0ed3ebfcafa",
            "description": "Security group for SSH",
            "egress": [],
            "id": "sg-00c6da0ed3ebfcafa",
            "ingress": [],
            "name": "terraform-module-sg-ssh-20241001071213917300000001",
            "name_prefix": "terraform-module-sg-ssh-",
            "owner_id": "398561966751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-module-sg-ssh"
            },
            "tags_all": {
              "Name": "terraform-module-sg-ssh"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0e77908df33c482e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ssh_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1904657074",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00c6da0ed3ebfcafa",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-4051331852",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00c6da0ed3ebfcafa",
            "security_group_rule_id": "sgr-0b39324960cb3f8ca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-4180156882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00c6da0ed3ebfcafa",
            "security_group_rule_id": "sgr-009eb9ffc32b0f250",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-public-ec2-module-set[\"one\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035b17f806b063591",
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:elastic-ip/eipalloc-035b17f806b063591",
            "association_id": "eipassoc-0630e52a29118b678",
            "domain": "vpc",
            "id": "eipalloc-035b17f806b063591",
            "instance": "i-0702879b85143d2c1",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0054d05ee68e10754",
            "private_dns": "ip-10-0-101-181.ap-northeast-2.compute.internal",
            "private_ip": "10.0.101.181",
            "public_dns": "ec2-3-39-59-174.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.59.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.terraform-public-ec2-module-set.aws_iam_instance_profile.this",
            "module.terraform-public-ec2-module-set.aws_iam_role.this",
            "module.terraform-public-ec2-module-set.aws_instance.ignore_ami",
            "module.terraform-public-ec2-module-set.aws_instance.this",
            "module.terraform-public-ec2-module-set.data.aws_iam_policy_document.assume_role_policy",
            "module.terraform-public-ec2-module-set.data.aws_partition.current",
            "module.terraform-public-ec2-module-set.data.aws_ssm_parameter.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-public-ec2-module-set[\"one\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0646f33511924e736",
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:instance/i-0702879b85143d2c1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0702879b85143d2c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Chungyun",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0054d05ee68e10754",
            "private_dns": "ip-10-0-101-181.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d4442cd7f036e75",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0689008f0a290b1b7",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-public-ec2-one",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-public-ec2-one",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "terraform-public-ec2-one"
            },
            "vpc_security_group_ids": [
              "sg-00c6da0ed3ebfcafa",
              "sg-07cd32de07b945447"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.terraform-public-ec2-module-set.aws_iam_instance_profile.this",
            "module.terraform-public-ec2-module-set.aws_iam_role.this",
            "module.terraform-public-ec2-module-set.data.aws_iam_policy_document.assume_role_policy",
            "module.terraform-public-ec2-module-set.data.aws_partition.current",
            "module.terraform-public-ec2-module-set.data.aws_ssm_parameter.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-public-ec2-module-set[\"two\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031cc1609f3b854b4",
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:elastic-ip/eipalloc-031cc1609f3b854b4",
            "association_id": "eipassoc-01279dc2960321c07",
            "domain": "vpc",
            "id": "eipalloc-031cc1609f3b854b4",
            "instance": "i-0981829ef9f09bbdd",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0dbe9f76695600418",
            "private_dns": "ip-10-0-102-213.ap-northeast-2.compute.internal",
            "private_ip": "10.0.102.213",
            "public_dns": "ec2-15-165-51-21.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.51.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.terraform-public-ec2-module-set.aws_iam_instance_profile.this",
            "module.terraform-public-ec2-module-set.aws_iam_role.this",
            "module.terraform-public-ec2-module-set.aws_instance.ignore_ami",
            "module.terraform-public-ec2-module-set.aws_instance.this",
            "module.terraform-public-ec2-module-set.data.aws_iam_policy_document.assume_role_policy",
            "module.terraform-public-ec2-module-set.data.aws_partition.current",
            "module.terraform-public-ec2-module-set.data.aws_ssm_parameter.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-public-ec2-module-set[\"two\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0646f33511924e736",
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:instance/i-0981829ef9f09bbdd",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0981829ef9f09bbdd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Chungyun",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dbe9f76695600418",
            "private_dns": "ip-10-0-102-213.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f297896b4baceb6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043db8d0f3f47cdd8",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-public-ec2-two",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-public-ec2-two",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "terraform-public-ec2-two"
            },
            "vpc_security_group_ids": [
              "sg-00c6da0ed3ebfcafa",
              "sg-07cd32de07b945447"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.terraform-public-ec2-module-set.aws_iam_instance_profile.this",
            "module.terraform-public-ec2-module-set.aws_iam_role.this",
            "module.terraform-public-ec2-module-set.data.aws_iam_policy_document.assume_role_policy",
            "module.terraform-public-ec2-module-set.data.aws_partition.current",
            "module.terraform-public-ec2-module-set.data.aws_ssm_parameter.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:security-group/sg-07cd32de07b945447",
            "description": "Security group for web-server with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-07cd32de07b945447",
            "ingress": [],
            "name": "terraform-module-sg-http-20241001071213922700000003",
            "name_prefix": "terraform-module-sg-http-",
            "owner_id": "398561966751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-module-sg-http"
            },
            "tags_all": {
              "Name": "terraform-module-sg-http"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0e77908df33c482e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-4176387401",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07cd32de07b945447",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2150302448",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07cd32de07b945447",
            "security_group_rule_id": "sgr-039c3295f8bb6e64c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-3305708239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07cd32de07b945447",
            "security_group_rule_id": "sgr-08afad27ca5f5ae28",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}